Add SharedVirtualRegisters submodule

--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -13,6 +13,9 @@ platform = atmelavr
 ; board = uno
 board = sparkfun_promicro16
 framework = arduino
-upload_port = COM10
+# upload_port = COM10
 ; upload_port = COM3
 
+; Library options
+lib_deps =
+    ArduinoLog
