--- a/software/.vscode/launch.json
+++ b/software/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/dongr/Code/Zakhar/zakhar_demo1_reptile/sw/eye/.pio/build/arduino/firmware.elf",
+            "executable": "c:/Users/dongr/Code/Zakhar/zakhar_sensors/software/.pio/build/arduino/firmware.elf",
             "toolchainBinDir": "C:/Users/dongr/.platformio/packages/toolchain-atmelavr/bin",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -24,7 +24,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/dongr/Code/Zakhar/zakhar_demo1_reptile/sw/eye/.pio/build/arduino/firmware.elf",
+            "executable": "c:/Users/dongr/Code/Zakhar/zakhar_sensors/software/.pio/build/arduino/firmware.elf",
             "toolchainBinDir": "C:/Users/dongr/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
