Add a schematic and 3d models

--- a/software/platformio.ini
+++ b/software/platformio.ini
@@ -10,11 +10,8 @@
 
 [env:arduino]
 platform = atmelavr
-; board = uno
-board = sparkfun_promicro16
+board = nanoatmega328
 framework = arduino
-# upload_port = COM10
-; upload_port = COM3
 
 ; Library options
 lib_deps =
