Add HC-SR04 driver

--- a/software/Makefile
+++ b/software/Makefile
@@ -168,6 +168,7 @@ C_INCLUDES =  $(STANDARD_INCLUDES) \
 -IMiddlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F \
 -IDrivers/CMSIS/Device/ST/STM32F4xx/Include \
 -IDrivers/CMSIS/Include \
+-IDrivers/Sensors/include \
 -IApp/include \
 -ILibraries/log.cx/src \
 -ILibraries/SharedVirtualRegisters/include
